updated features styling to prevent overflow on smaller devices

--- a/src/components/updated/home/features.scss
+++ b/src/components/updated/home/features.scss
@@ -129,13 +129,13 @@ section.features {
   .feature-list {
     grid-row: 2;
     grid-column: 1;
-    @media (max-width: exclusive-breakpoint($large-phone)) {
+    @media (max-width: exclusive-breakpoint(calc($large-phone + 75px))) {
       grid-column: 1 / span 2;
     }
 
     &:last-child {
       grid-column: 2;
-      @media (max-width: exclusive-breakpoint($large-phone)) {
+      @media (max-width:  exclusive-breakpoint(calc($large-phone + 75px))) {
         grid-column: 1 / span 2;
         grid-row: 3;
       }
@@ -149,7 +149,7 @@ section.features {
   }
 }
 
-@media (max-width: exclusive-breakpoint($large-phone)) {
+@media (max-width: exclusive-breakpoint(calc($large-phone + 75px))) {
   .open-contact-form {
     width: 100% !important;
   }
